new proj/src/objects/GE_PRM_KYC_Termination_Checklist__c.object
<CustomObject>
    <fields>
        <fullName>GE_PRM_ICP_Report_SR_Comment__c</fullName>
        <inlineHelpText>ICP Report (SR) Comments</inlineHelpText>
        <label>ICP Report (SR) Comments</label>
        <length>15000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_PRM_ICP_Report__c</fullName>
        <description>ICP Report (Significant Risk)</description>
        <inlineHelpText>ICP Report (Significant Risk)</inlineHelpText>
        <label>ICP Report (SR)</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Process</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PRM_KYC_Completed_Time_Stamp__c</fullName>
        <label>KYC Passed/Failed Time Stamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GE_PRM_KYC_Cycle_Time__c</fullName>
        <formula>GE_PRM_KYC_Completed_Time_Stamp__c -  GE_PRM_Recommendation__r.CreatedDate</formula>
        <label>KYC Cycle Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_PRM_KYC_Link__c</fullName>
        <description>link field for PRM KYC</description>
        <label>PRM KYC Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Latest_Fiancial_Stmt_Comments__c</fullName>
        <inlineHelpText>Latest Financial Statement Comments</inlineHelpText>
        <label>Latest Fiancial Stmt Comments</label>
        <length>15000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Latest_Financial_Statement__c</fullName>
        <description>Latest Financial Statement</description>
        <inlineHelpText>Latest Financial Statement</inlineHelpText>
        <label>Latest Financial Statement</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Legal_Proceedings_Check_Comments__c</fullName>
        <inlineHelpText>Legal Proceedings Check (Renewal or SR)</inlineHelpText>
        <label>Legal Proceedings Check Comments</label>
        <length>15000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Legal_Proceedings_Check__c</fullName>
        <description>Legal Proceedings Check (Significant Risk)</description>
        <inlineHelpText>Legal Proceedings Check (Significant Risk)</inlineHelpText>
        <label>Legal Proceedings Check (Renewal or SR)</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In progress</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PRM_NX_Review_SR__c</fullName>
        <label>NX Review (SR)</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Negative_News_Search_Comments__c</fullName>
        <inlineHelpText>Negative News Search Comments</inlineHelpText>
        <label>Negative News Search Comments</label>
        <length>15000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Negative_News_Search__c</fullName>
        <description>Negative News Search</description>
        <inlineHelpText>Negative News Search</inlineHelpText>
        <label>Negative News Search</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In progress</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Other_Verification__c</fullName>
        <description>Other Verification (ICP report if necessary/not done previously or other)</description>
        <inlineHelpText>Other Verification (ICP report if necessary/not done previously or other)</inlineHelpText>
        <label>Other Verification (e.g. ICP Report)</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PRM_PRM_Content__c</fullName>
        <formula>IF(NOT(ISBLANK( GE_HQ_Account__c)), HYPERLINK(&quot;/apex/GE_PRM_KYC_Content_Upload?Kycid=&quot;+Id, IMAGE(&apos;/resource/1381242651000/GE_PRM_Content&apos;, &quot;Click to Add PRM Documents&quot;),&quot;_parent&quot;),&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>&lt;font color=&quot;white&quot;&gt;&lt;/font&gt;</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Recommendation__c</fullName>
        <label>Recommendation</label>
        <referenceTo>GE_PRM_Recommendation__c</referenceTo>
        <relationshipLabel>KYC</relationshipLabel>
        <relationshipName>KYC</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>GE_PRM_Reference_Check_SR_Comments__c</fullName>
        <inlineHelpText>Reference Check (SR)</inlineHelpText>
        <label>Reference Check (SR) Comments</label>
        <length>15000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Reference_Check__c</fullName>
        <description>Reference Check (Significant Risk)</description>
        <inlineHelpText>Reference Check (Significant Risk)</inlineHelpText>
        <label>Reference Check (SR)</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In progress</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Regional_Compliance_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Regional Compliance Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>KYC1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Self_Assesment__c</fullName>
        <description>Self Assesment</description>
        <inlineHelpText>Self Assesment</inlineHelpText>
        <label>Self Assesment</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Status__c</fullName>
        <description>Status</description>
        <inlineHelpText>Status</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>KYC Need More Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KYC In Progress</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Due Diligence Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Due Diligence Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Watch_List_Screening_Comments__c</fullName>
        <inlineHelpText>Watch List Screening Comments</inlineHelpText>
        <label>Watch List Screening Comments</label>
        <length>15000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Watch_List_Screening__c</fullName>
        <description>Watch List Screening</description>
        <inlineHelpText>Watch List Screening</inlineHelpText>
        <label>Watch List Screening</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In progress</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Written_Ack_SL_Policy__c</fullName>
        <description>Written Acknowledgement of S&amp;L Policy</description>
        <inlineHelpText>Written Acknowledgement of S&amp;L Policy</inlineHelpText>
        <label>Written Acknowledgement of S&amp;L Policy</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PW_Acc_Mod_Req__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Modification Request</label>
        <referenceTo>Account_Request__c</referenceTo>
        <relationshipLabel>KYC</relationshipLabel>
        <relationshipName>AccModReq_KYCs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_PW_Bill_To_Phone__c</fullName>
        <label>Bill To Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>GE_PW_Can_Aud_Fin_St__c</fullName>
        <inlineHelpText>Can Audited Financial Statements be provided?</inlineHelpText>
        <label>Can Audited Fin. Statements Provided?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PW_Countries_are_same__c</fullName>
        <formula>IF( (Text(GE_HQ_Account__r.GE_HQ_New_Account_Country__c)  = GE_HQ_Account__r.BillingCountry) &amp;&amp;  (Text(GE_HQ_Account__r.GE_HQ_New_Account_Country__c)   = GE_HQ_Account__r.ShippingCountry), IMAGE( &quot;/resource/1310550794000/RiskTopicSignalsGreen&quot;,&quot;Green&quot; ,20,20), IMAGE(&quot;resource/1310550839000/RiskTopicSignalsRed&quot; ,&quot;Red&quot;,20,20))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Compare the Countries of the addresses. Are they all the same?</inlineHelpText>
        <label>Countries are same?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PW_DB_DUNS_BillTo__c</fullName>
        <label>Requested D&amp;B DUNS # (Bill To)</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PW_DB_DUNS_QuoteTo__c</fullName>
        <label>Requested D&amp;B DUNS # (Quote To)</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PW_DB_DUNS_ShipTo__c</fullName>
        <label>Requested D&amp;B DUNS # (Ship To)</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PW_DIRECTOR_DUE_DILIGENCE__c</fullName>
        <label>Director Due Diligence</label>
        <picklist>
            <picklistValues>
                <fullName>Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PW_D_B_VALIDATION__c</fullName>
        <label>D&amp;B Validation</label>
        <picklist>
            <picklistValues>
                <fullName>Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PW_Do_u_need_additional_approver_req__c</fullName>
        <inlineHelpText>DO YOU NEED ADDITIONAL APPROVER TO REVIEW THIS REQUEST?</inlineHelpText>
        <label>Do you need additional approver  req</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PW_Existing_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Existing Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>KYC (Existing Customer)</relationshipLabel>
        <relationshipName>KYC1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_PW_Initial_End_User_Account_Name__c</fullName>
        <label>Initial End User  Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PW_Initial_End_User_City__c</fullName>
        <label>Initial End User City</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PW_Initial_End_User_Country__c</fullName>
        <label>Initial End User Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PW_Initial_End_User_State_Province__c</fullName>
        <label>Initial End User State/Province</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PW_Initial_End_User_Street_Address__c</fullName>
        <label>Initial End User Street Address</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PW_Initial_End_User_Zip_Postal_Code__c</fullName>
        <label>Initial End User Zip/Postal Code</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PW_Is_Initial_End_User_different__c</fullName>
        <inlineHelpText>Is Initial End User different than Account Name?</inlineHelpText>
        <label>Is Initial End User diff than Account</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PW_Is_the_KYC_for_an_Existing_Customr__c</fullName>
        <inlineHelpText>Is the KYC for an existing customer, new address?</inlineHelpText>
        <label>Is the KYC for an Existing Customer?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PW_Is_the_Subsidiary_100_owned_by__c</fullName>
        <inlineHelpText>Is the Subsidiary 100% owned by the Parent?</inlineHelpText>
        <label>Is the Subsidiary 100% owned by Parent?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PW_KYCQuest1__c</fullName>
        <inlineHelpText>Direct Relation shall be defined as:
(1) a department, agency, corporation, or other entity of the Chinese Ministry of National Defense or (2) performing military functions or operations.</inlineHelpText>
        <label>Does the company have a direct relation</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PW_KYCQuest2__c</fullName>
        <label>Does the Chinese Military have any board</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PW_KYC_Type__c</fullName>
        <label>KYC Type</label>
        <picklist>
            <picklistValues>
                <fullName>New Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Modify Account</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PW_NEGATIVE_NEWS_SEARCH_COMPLETE__c</fullName>
        <label>Negative News Search Complete</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PW_Negative_News_Search_Finding__c</fullName>
        <label>Negative News Search Finding</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PW_Primary_GE_Employee_who_will_work__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary GE Employee who will work</label>
        <referenceTo>User</referenceTo>
        <relationshipName>KYC3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_PW_Requestor_Name__c</fullName>
        <formula>GE_HQ_Account__r.CreatedBy.FirstName  &amp; &apos; &apos; &amp; GE_HQ_Account__r.CreatedBy.LastName</formula>
        <label>Requestor Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PW_Requestor_Phone__c</fullName>
        <formula>GE_HQ_Account__r.CreatedBy.Phone</formula>
        <label>Requestor Phone #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PW_Requestor_Tier_2_Business__c</fullName>
        <formula>Text( GE_HQ_Account__r.CreatedBy.GE_HQ_Tier_2_P_L__c )</formula>
        <label>Requestor Tier 2 Business</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PW_Requestor_email_address__c</fullName>
        <formula>GE_HQ_Account__r.CreatedBy.Email</formula>
        <label>Requestor email address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PW_Risk_Message__c</fullName>
        <label>&lt;font color=&quot;white&quot;&gt;&lt;/font&gt;</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>GE_PW_Risk_Type__c</fullName>
        <label>Risk Type</label>
        <picklist>
            <picklistValues>
                <fullName>Low Risk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium Risk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High Risk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High Risk with ITC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PW_Sales_KYC_Process__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to differentiate KYC process initiated for New Customer Request</description>
        <label>Sales KYC Process</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_PW_Sales_Manager_respons_for_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GE Sale Manager responsible for Customer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>KYC2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_PW_Select_Business_Entity__c</fullName>
        <label>Select Business Entity</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_PW_Select_Type_of_Business__c</fullName>
        <label>Select Type of Business</label>
        <picklist>
            <picklistValues>
                <fullName>Sole Proprietorship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subsidiary of Public Traded Company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Publically Traded Company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Joint Venture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partnership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Privately Held Corporation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PW_Send_to_CMF_Bill_to__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send to CMF(Bill to)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_PW_Send_to_CMF_Quote_to__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send to CMF(Quote to)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_PW_Send_to_CMF_Ship_to__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send to CMF(Ship to)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_PW_Ship_To_Phone__c</fullName>
        <label>Ship To Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>GE_PW_Sold_To_Phone__c</fullName>
        <label>Sold To Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>GE_PW_same_as_CustomerName__c</fullName>
        <inlineHelpText>Would you like to update the Account Name for the new address to the same Account Name as the customer?</inlineHelpText>
        <label>Name for new address same as Customer?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>KYC_CoE_Cycle_Time__c</fullName>
        <formula>(KYC_Inbound_Response__c - KYC_Outbound_Response__c) * 24</formula>
        <label>KYC CoE Cycle Time</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KYC_Inbound_Response__c</fullName>
        <label>KYC Inbound Response</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>KYC_Outbound_Response__c</fullName>
        <label>KYC Outbound Response</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Ship_To_Additional_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ship To Additional Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>KYC (Ship To Additional Account)</relationshipLabel>
        <relationshipName>KYC3</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>KYC</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>GE_HQ_Form_Type__c</columns>
        <columns>GE_HQ_Status__c</columns>
        <columns>GE_HQ_KYC_Tm_Comments__c</columns>
        <columns>GE_HQ_KYC_Team_SSO_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>GE_OG_NewFin_Status__c</field>
            <operation>equals</operation>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Finance_Completed</fullName>
        <columns>NAME</columns>
        <columns>GE_HQ_Account__c</columns>
        <columns>GE_OG_NewFin_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>GE_OG_NewFin_Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </filters>
        <filters>
            <field>GE_PW_KYC_Type__c</field>
            <operation>notEqual</operation>
            <value>Modify Account</value>
        </filters>
        <label>Finance Completed</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Finance_In_Progress</fullName>
        <columns>NAME</columns>
        <columns>GE_HQ_Account__c</columns>
        <columns>GE_OG_NewFin_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>GE_OG_NewFin_Status__c</field>
            <operation>contains</operation>
            <value>In Progress</value>
        </filters>
        <filters>
            <field>GE_PW_KYC_Type__c</field>
            <operation>notEqual</operation>
            <value>Modify Account</value>
        </filters>
        <label>Finance In Progress</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Finance_Not_Started</fullName>
        <columns>NAME</columns>
        <columns>GE_HQ_Account__c</columns>
        <columns>GE_OG_NewFin_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>GE_OG_NewFin_Status__c</field>
            <operation>contains</operation>
            <value>Pending Due Diligence</value>
        </filters>
        <filters>
            <field>GE_PW_KYC_Type__c</field>
            <operation>notEqual</operation>
            <value>Modify Account</value>
        </filters>
        <label>Finance Pending Due Diligence</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Finance_Re_Review</fullName>
        <columns>NAME</columns>
        <columns>GE_HQ_Account__c</columns>
        <columns>GE_OG_Finance_checked__c</columns>
        <columns>GE_OG_NewFin_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>GE_OG_Finance_checked__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Finance Re-Review</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Finance_Rejected</fullName>
        <columns>NAME</columns>
        <columns>GE_HQ_Account__c</columns>
        <columns>GE_OG_NewFin_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>GE_OG_NewFin_Status__c</field>
            <operation>equals</operation>
            <value>Pending User Review - On Hold</value>
        </filters>
        <filters>
            <field>GE_PW_KYC_Type__c</field>
            <operation>notEqual</operation>
            <value>Modify Account</value>
        </filters>
        <label>Finance Pending User Review - On Hold</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Finance_Started</fullName>
        <columns>NAME</columns>
        <columns>GE_HQ_Account__c</columns>
        <columns>GE_OG_NewFin_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>GE_OG_NewFin_Status__c</field>
            <operation>equals</operation>
            <value>Submitted</value>
        </filters>
        <filters>
            <field>GE_PW_KYC_Type__c</field>
            <operation>notEqual</operation>
            <value>Modify Account</value>
        </filters>
        <label>Finance Submitted (Pending CMF)</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>KYC_Approved</fullName>
        <columns>NAME</columns>
        <columns>GE_HQ_Status__c</columns>
        <columns>GE_HQ_Account__c</columns>
        <columns>GE_OG_Account_Status__c</columns>
        <columns>GE_HQ_KYC_Tm_Comments__c</columns>
        <columns>GE_HQ_KYC_Team_SSO_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>GE_HQ_Status__c</field>
            <operation>equals</operation>
            <value>Manual Due Diligence Approved</value>
        </filters>
        <label>KYC Approved</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>KYC_In_Process</fullName>
        <columns>NAME</columns>
        <columns>GE_HQ_Status__c</columns>
        <columns>GE_HQ_Account__c</columns>
        <columns>GE_OG_Account_Status__c</columns>
        <columns>GE_HQ_KYC_Tm_Comments__c</columns>
        <columns>GE_HQ_KYC_Team_SSO_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>GE_HQ_Status__c</field>
            <operation>equals</operation>
            <value>Pending User Submission</value>
        </filters>
        <label>KYC In Process(Pending User Submission)</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>KYC_Rejected</fullName>
        <columns>NAME</columns>
        <columns>GE_PW_Acc_Mod_Req__c</columns>
        <columns>GE_PW_KYC_Type__c</columns>
        <columns>GE_HQ_Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>GE_PW_Risk_Type__c</columns>
        <columns>GE_HQ_KYC_Tm_Comments__c</columns>
        <columns>GE_HQ_KYC_Team_SSO_ID__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>GE_HQ_Status__c</field>
            <operation>equals</operation>
            <value>Manual Due Diligence Rejected</value>
        </filters>
        <label>KYC Rejected</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>KYC_Sent_Back</fullName>
        <columns>NAME</columns>
        <columns>GE_PW_Acc_Mod_Req__c</columns>
        <columns>GE_PW_KYC_Type__c</columns>
        <columns>GE_HQ_Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>GE_PW_Risk_Type__c</columns>
        <columns>GE_HQ_KYC_Tm_Comments__c</columns>
        <columns>GE_HQ_KYC_Team_SSO_ID__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>GE_HQ_Status__c</field>
            <operation>equals</operation>
            <value>Manual Due Diligence Sent back</value>
        </filters>
        <label>KYC Sent Back</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>KYC_Submitted</fullName>
        <columns>NAME</columns>
        <columns>GE_PW_Acc_Mod_Req__c</columns>
        <columns>GE_PW_KYC_Type__c</columns>
        <columns>GE_HQ_Status__c</columns>
        <columns>GE_OG_Account_Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>GE_PW_Risk_Type__c</columns>
        <columns>GE_HQ_KYC_Tm_Comments__c</columns>
        <columns>GE_HQ_KYC_Team_SSO_ID__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>GE_HQ_Status__c</field>
            <operation>equals</operation>
            <value>Manual Due Diligence Submitted</value>
        </filters>
        <label>KYC Submitted</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>KYC #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>KYC</pluralLabel>
    <recordTypes>
        <fullName>GE_HQ_KYC_Review</fullName>
        <active>true</active>
        <description>Used for ES KYC Process. (Review by KYC Team)</description>
        <label>KYC Review</label>
    </recordTypes>
    <recordTypes>
        <fullName>GE_HQ_KYC_Short_Form_Approved</fullName>
        <active>true</active>
        <description>This is used for ES KYC Short form (after approval)</description>
        <label>KYC Short Form - Approved</label>
    </recordTypes>
    <recordTypes>
        <fullName>GE_HQ_No_KYC_Required</fullName>
        <active>true</active>
        <description>For ES KYC Process, Where KYC process is not required (For Minimal fields)</description>
        <label>No KYC Required</label>
    </recordTypes>
</CustomObject>